[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/GameLogo.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/blue.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/blue_press.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/font40.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/sprites/red.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/red_press.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/yellow.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/yellow_press.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/green.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/green_press.png" type="Texture" id=11]
[ext_resource path="res://assets/sounds/theme.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sprites/backgroud_loading.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

resource/name = "open"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("openAnim/logo:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 365.195, -150.691 ), Vector2( 365.195, -150.691 ), Vector2( 365.195, 480.196 ), Vector2( 365.195, 174.664 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("openAnim/menu/btnNewGame:rect/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -630, 336 ), Vector2( -630, 336 ), Vector2( 105, 336 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("openAnim/menu/btnRecord:rect/pos")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 774, 569 ), Vector2( 774, 569 ), Vector2( 106, 569 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("openAnim/menu/btnAbout:rect/pos")
tracks/3/interp = 2
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -615, 802 ), Vector2( -615, 802 ), Vector2( 108, 802 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("openAnim/menu/btnSettings:rect/pos")
tracks/4/interp = 2
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 2.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 789, 1035 ), Vector2( 789, 1035 ), Vector2( 108, 1035 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("openAnim/background:modulate")
tracks/5/interp = 2
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="mainmenu" type="Node"]

script/script = ExtResource( 1 )

[node name="openAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/open = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "open"

[node name="logo" type="Sprite" parent="openAnim"]

transform/pos = Vector2( 365.195, 174.664 )
texture = ExtResource( 2 )

[node name="menu" type="Control" parent="openAnim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnNewGame" type="TextureButton" parent="openAnim/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 105.0
margin/top = 336.0
margin/right = 635.0
margin/bottom = 542.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label" type="Label" parent="openAnim/menu/btnNewGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 31.0
margin/right = 461.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 5 )
text = "Novo Jogo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnRecord" type="TextureButton" parent="openAnim/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 569.0
margin/right = 636.0
margin/bottom = 775.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label" type="Label" parent="openAnim/menu/btnRecord"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 31.0
margin/right = 461.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 5 )
text = "Recordes"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnAbout" type="TextureButton" parent="openAnim/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = 802.0
margin/right = 638.0
margin/bottom = 1008.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label" type="Label" parent="openAnim/menu/btnAbout"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 31.0
margin/right = 461.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 5 )
text = "Sobre"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnSettings" type="TextureButton" parent="openAnim/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = 1035.0
margin/right = 638.0
margin/bottom = 1241.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label" type="Label" parent="openAnim/menu/btnSettings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 31.0
margin/right = 488.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 5 )
text = "Configurações"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="theme" type="StreamPlayer" parent="openAnim"]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="background" type="Sprite" parent="openAnim"]

transform/pos = Vector2( 360, 640 )
z/z = -1
texture = ExtResource( 13 )

[connection signal="pressed" from="openAnim/menu/btnNewGame" to="." method="_on_btnNewGame_pressed"]

[connection signal="pressed" from="openAnim/menu/btnRecord" to="." method="_on_btnRecord_pressed"]

[connection signal="pressed" from="openAnim/menu/btnAbout" to="." method="_on_btnAbout_pressed"]

[connection signal="pressed" from="openAnim/menu/btnSettings" to="." method="_on_btnSettings_pressed"]


